# smart_code_analyzer

./: .gitignore  README.md  docker-compose.yml  get_stuct.py  pyproject.toml  run.py  start.bat  structure.txt
settings/: code_analizer.yaml
smart_code_analyzer/: __init__.py  version.py
smart_code_analyzer/backend/: Dockerfile.backend  ai_analyzer.py  analyzer_api.py  main.py  models.py
smart_code_analyzer/frontend/: Dockerfile.frontend  package.json  tailwind.config.js
smart_code_analyzer/frontend/static/js/: main.js
smart_code_analyzer/frontend/templates/: index.html
tests/: test_ai_analyzer.py  test_main.py
