[tool.poetry]
name = "smart-code-analyzer"
version = "0.0.08"
description = "Умный анализатор кода"
authors = ["Andrey Korenyk <korenyuk.a.n@mail.ru>"]
readme = "README.md"
packages = [{include = "smart_code_analyzer"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
code-analizer = {git = "https://github.com/sad-engineer/code_analizer.git"}
openai = "^1.84.0"
uvicorn = "^0.34.3"
dotenv = "^0.9.9"
python-multipart = "^0.0.20"
jinja2 = "^3.1.6"


[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
skip = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "venv",
    "env",
    "_build",
    "buck-out",
    "build",
    "dist"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "smart_code_analyzer.backend.main:start"
